<resources>
    <string name="app_name">prueba</string>
    <string name="codigo" />
    <string name="producto">producto</string>


    <string name="Buscar">Buscar</string>

    <string name="texto1">texto1</string>
    <string name="codigoBarras">CodigoBarras</string>

    <string name="Codigo">Codigo</string>
    <string name="escanear">Escanear</string>
    <string name="validar">validar</string>
    <string name="escanear_gu_a">Escanear Guía</string>
    <string name="validaci_n_de_registro">Validación de registro</string>
    <string name="consultar">Consultar</string>
    <string name="ingresa_los_items">Ingresa los items</string>
    <string name="consultar_item_validados">Consultar item validados</string>
    <string name="n_meros_de_serie_validados">Números de serie validados</string>
    <string name="validaci_n_de_registros">VALIDACIÓN DE REGISTROS</string>
    <string name="n_mero_de_gu_a">Número de Guía</string>
    <string name="ingresar_item">Ingresar item</string>
    <string name="codigo_de_barras">Codigo de Barras</string>
    <string name="Ingresar">Ingresar</string>
    <string name="todo">TODO</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="movon">MOVON</string>
    <string name="tracking">TRACKING</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
</resources>