<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnValidar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginBottom="232dp"
        android:text="@string/validar"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edItem"
        android:layout_width="159dp"
        android:layout_height="41dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="576dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/n_mero_de_gu_a"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEscanear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="308dp"
        android:text="@string/escanear"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCodigoBarras" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginLeft="204dp"
        android:layout_marginBottom="65dp"
        android:text="@string/consultar"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toTopOf="@+id/tvLote"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCodigoBarras"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:hint="@string/codigoBarras"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543" />

    <TextView
        android:id="@+id/tvLote"
        android:layout_width="248dp"
        android:layout_height="60dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginBottom="444dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLoteValido"
        android:layout_width="374dp"
        android:layout_height="160dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="330dp"
        android:layout_height="42dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="16dp"
        android:text="@string/validaci_n_de_registros"
        android:textColor="#E80505"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/edItem"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="12dp"
        android:text="@string/n_meros_de_serie_validados"
        android:textColor="#1C6AA8"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvLoteValido"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginBottom="27dp"
        android:text="@string/ingresar_item"
        android:textColor="#1C6AA8"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvCodigoBarras"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRegistro"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:textColor="#127ACD"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtCodigoBarras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Codigo de Barras"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnValidar"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>