<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroValidacion">

    <Button
        android:id="@+id/btnValidar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginBottom="208dp"
        android:text="@string/validar"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edItem"
        android:layout_width="159dp"
        android:layout_height="41dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="544dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/n_mero_de_gu_a"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEscanear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="304dp"
        android:text="@string/escanear"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtCodigoBarras" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="232dp"
        android:layout_marginLeft="232dp"
        android:layout_marginBottom="76dp"
        android:text="@string/consultar"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toTopOf="@+id/tvLote"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLote"
        android:layout_width="248dp"
        android:layout_height="60dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginBottom="404dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLoteValido"
        android:layout_width="258dp"
        android:layout_height="146dp"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLoteNoValido"
        android:layout_width="264dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="256dp"
        android:textColor="#CD2A2A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="330dp"
        android:layout_height="42dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="16dp"
        android:text="@string/validaci_n_de_registros"
        android:textColor="#E80505"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/edItem"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginLeft="184dp"
        android:layout_marginBottom="16dp"
        android:text="@string/n_meros_de_serie_validados"
        android:textColor="#1C6AA8"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvLoteValido"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginBottom="12dp"
        android:text="@string/ingresar_item"
        android:textColor="#1C6AA8"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEscanear"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRegistro"
        android:layout_width="336dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="464dp"
        android:textColor="#127ACD"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNoResgistro"
        android:layout_width="367dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="464dp"
        android:textColor="#CD1212"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvRegistro"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtCodigoBarras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/codigo_de_barras"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnValidar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCerrar"
        android:layout_width="176dp"
        android:layout_height="41dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cerrar_sesi_n"
        android:textSize="12sp"
        app:backgroundTint="#EC1B45"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/idLayout"
        android:layout_width="104dp"
        android:layout_height="425dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginBottom="7dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"></LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>